--- a/eLibrary/src/app/login/login.component.html
+++ b/eLibrary/src/app/login/login.component.html
@@ -1,1 +1,47 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+</head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
+<body>
+    <div data-bind="style: { backgroundImage: 'url(../../assets/image/ilustracion-vector-estantes-libros-coloridos_8499-7.jpg)' }">
+        <div class=" rounded box">
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="rounded-pill form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" />
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small
+            >
+          </div>
+          <div class=" form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input
+              type="password"
+              class=" rounded-pill form-control"
+              id="exampleInputPassword1"
+              placeholder="Password"
+            />
+          </div>
+          <div class="form-group form-check">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="exampleCheck1"
+            />
+            <label class="form-check-label" for="exampleCheck1"
+              >Check me out</label
+            >
+          </div>
+          <button type="submit" class="rounded-pill btn btn-primary">
+            Submit
+          </button>
+        </form>
+      </div>
+    </div>
+  </body>
+</html>
